F4: update 2 specs, update 30 files
